--- a/package.json
+++ b/package.json
@@ -73,6 +73,13 @@
                     "default": "prompt",
                     "markdownDescription": "%AWS.configuration.description.onDefaultRegionMissing%"
                 },
+                "aws.s3.maxItemsPerPage": {
+                    "type": "number",
+                    "default": 300,
+                    "minimum": 3,
+                    "maximum": 1000,
+                    "markdownDescription": "%AWS.configuration.description.s3.maxItemsPerPage%"
+                },
                 "aws.sam.template.depth": {
                     "type": "number",
                     "default": 4,
@@ -410,6 +417,10 @@
                     "when": "false"
                 },
                 {
+                    "command": "aws.copyName",
+                    "when": "false"
+                },
+                {
                     "command": "aws.downloadSchemaItemCode",
                     "when": "false"
                 },
@@ -447,6 +458,26 @@
                 },
                 {
                     "command": "aws.showErrorDetails",
+                    "when": "false"
+                },
+                {
+                    "command": "aws.s3.copyPath",
+                    "when": "false"
+                },
+                {
+                    "command": "aws.s3.createBucket",
+                    "when": "false"
+                },
+                {
+                    "command": "aws.s3.createFolder",
+                    "when": "false"
+                },
+                {
+                    "command": "aws.s3.downloadFileAs",
+                    "when": "false"
+                },
+                {
+                    "command": "aws.s3.uploadFile",
                     "when": "false"
                 }
             ],
@@ -541,6 +572,26 @@
             ],
             "view/item/context": [
                 {
+                    "command": "aws.s3.downloadFileAs",
+                    "when": "view == aws.explorer && viewItem == awsS3FileNode",
+                    "group": "inline@1"
+                },
+                {
+                    "command": "aws.s3.createBucket",
+                    "when": "view == aws.explorer && viewItem == awsS3Node",
+                    "group": "inline@1"
+                },
+                {
+                    "command": "aws.s3.createFolder",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/",
+                    "group": "inline@1"
+                },
+                {
+                    "command": "aws.s3.uploadFile",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/",
+                    "group": "inline@2"
+                },
+                {
                     "command": "aws.invokeLambda",
                     "when": "view == aws.explorer && viewItem =~ /^(awsRegionFunctionNode|awsCloudFormationFunctionNode)$/",
                     "group": "0@1"
@@ -581,9 +632,39 @@
                     "group": "0@2"
                 },
                 {
-                    "command": "aws.copyArn",
-                    "when": "view == aws.explorer && viewItem =~ /^(awsRegionFunctionNode|awsCloudFormationFunctionNode|awsStateMachineNode|awsCloudFormationNode|awsCloudWatchLogNode)$/",
+                    "command": "aws.s3.createBucket",
+                    "when": "view == aws.explorer && viewItem == awsS3Node",
+                    "group": "0@1"
+                },
+                {
+                    "command": "aws.s3.downloadFileAs",
+                    "when": "view == aws.explorer && viewItem == awsS3FileNode",
+                    "group": "0@1"
+                },
+                {
+                    "command": "aws.s3.uploadFile",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/",
+                    "group": "0@1"
+                },
+                {
+                    "command": "aws.s3.createFolder",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsS3BucketNode|awsS3FolderNode)$/",
                     "group": "1@1"
+                },
+                {
+                    "command": "aws.copyName",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsRegionFunctionNode|awsCloudFormationFunctionNode|awsStateMachineNode|awsCloudFormationNode|awsS3BucketNode|awsS3FolderNode|awsS3FileNode)$/",
+                    "group": "2@1"
+                },
+                {
+                    "command": "aws.copyArn",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsRegionFunctionNode|awsCloudFormationFunctionNode|awsStateMachineNode|awsCloudFormationNode|awsS3BucketNode|awsS3FolderNode|awsS3FileNode)$/",
+                    "group": "2@2"
+                },
+                {
+                    "command": "aws.s3.copyPath",
+                    "when": "view == aws.explorer && viewItem =~ /^(awsS3FolderNode|awsS3FileNode)$/",
+                    "group": "2@3"
                 },
                 {
                     "command": "aws.downloadSchemaItemCode",
@@ -654,6 +735,38 @@
                 "category": "AWS"
             },
             {
+                "command": "aws.s3.copyPath",
+                "title": "%AWS.command.s3.copyPath%",
+                "category": "AWS"
+            },
+            {
+                "command": "aws.s3.downloadFileAs",
+                "title": "%AWS.command.s3.downloadFileAs%",
+                "category": "AWS",
+                "icon": "$(cloud-download)"
+            },
+            {
+                "command": "aws.s3.uploadFile",
+                "title": "%AWS.command.s3.uploadFile%",
+                "category": "AWS",
+                "icon": "$(cloud-upload)"
+            },
+            {
+                "command": "aws.s3.createFolder",
+                "title": "%AWS.command.s3.createFolder%",
+                "category": "AWS",
+                "icon": "$(new-folder)"
+            },
+            {
+                "command": "aws.s3.createBucket",
+                "title": "%AWS.command.s3.createBucket%",
+                "category": "AWS",
+                "icon": {
+                    "light": "resources/light/s3/create-bucket.svg",
+                    "dark": "resources/dark/s3/create-bucket.svg"
+                }
+            },
+            {
                 "command": "aws.invokeLambda",
                 "title": "%AWS.command.invokeLambda%",
                 "category": "AWS"
@@ -709,6 +822,11 @@
             {
                 "command": "aws.copyArn",
                 "title": "%AWS.command.copyArn%",
+                "category": "AWS"
+            },
+            {
+                "command": "aws.copyName",
+                "title": "%AWS.command.copyName%",
                 "category": "AWS"
             },
             {
@@ -863,6 +981,7 @@
         "@aws-toolkits/telemetry": "0.0.30",
         "@types/adm-zip": "^0.4.32",
         "@types/async-lock": "^1.1.0",
+        "@types/bytes": "^3.1.0",
         "@types/cross-spawn": "^6.0.0",
         "@types/del": "^3.0.1",
         "@types/fs-extra": "^8.0.1",
@@ -871,6 +990,7 @@
         "@types/lodash": "^4.14.136",
         "@types/lolex": "^5.1.0",
         "@types/marked": "^0.6.5",
+        "@types/mime-types": "^2.1.0",
         "@types/mocha": "^7.0.2",
         "@types/node": "^10.14.22",
         "@types/readline-sync": "^1.4.3",
@@ -921,6 +1041,7 @@
         "amazon-states-language-service": "^1.1.6",
         "async-lock": "^1.1.3",
         "aws-sdk": "^2.581.0",
+        "bytes": "^3.1.0",
         "cloudformation-schema-js-yaml": "^1.0.1",
         "cross-spawn": "^6.0.5",
         "del": "^3.0.0",
@@ -930,6 +1051,7 @@
         "js-yaml": "^3.13.1",
         "jsonc-parser": "^2.0.2",
         "lodash": "^4.17.19",
+        "mime-types": "^2.1.27",
         "moment": "^2.24.0",
         "original-fs": "^1.1.0",
         "portfinder": "^1.0.25",
