localLambdaRunner.ts: support sam.buildArguments, sam.localArguments
- change type of `sam.buildArguments` to "array"
- change type of `sam.localArguments` to "array"
- append the args to the end of the SAM invocations

--- a/package.json
+++ b/package.json
@@ -281,7 +281,10 @@
                                 "properties": {
                                     "buildArguments": {
                                         "description": "%AWS.configuration.description.awssam.debug.buildArguments%",
-                                        "type": "string"
+                                        "type": "array",
+                                        "items": {
+                                            "type": "string"
+                                        }
                                     },
                                     "containerBuild": {
                                         "description": "%AWS.configuration.description.awssam.debug.containerBuild%",
@@ -293,7 +296,10 @@
                                     },
                                     "localArguments": {
                                         "description": "%AWS.configuration.description.awssam.debug.localArguments%",
-                                        "type": "string"
+                                        "type": "array",
+                                        "items": {
+                                            "type": "string"
+                                        }
                                     },
                                     "skipNewImageCheck": {
                                         "description": "%AWS.configuration.description.awssam.debug.skipNewImageCheck%",
