Clean up MFA, introduce a connection requires user interaction state (#1808)
* Extracted out CredentialIdentifier interface
* Added a terminal state in explorer when credentials requires user action
* Fix cloud debug verify deadlock if creds were not already validated
* Clean up MFA code / messages

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -241,10 +241,13 @@ configure.validate.no_region_specified=Must specify a region.
 credentials.could_not_open=Could not open credential file {0} for editing
 credentials.invalid.more_info=More info...
 credentials.invalid.title=Invalid AWS Connection
+credentials.mfa.action=Enter MFA code
+credentials.mfa.display=''{0}'' requires MFA to connect
+credentials.mfa.display.short=MFA code required
+credentials.mfa.message=Enter MFA code for device: {0}
+credentials.mfa.title=MFA Required to Connect to AWS Using {0}
 credentials.profile.circular_profiles=Profile ''{0}'' is invalid due to a circular profile dependency was found between {1}
 credentials.profile.failed_load=Failed to load AWS profiles
-credentials.profile.mfa.message=Enter MFA code for device: {0}
-credentials.profile.mfa.title=MFA Challenge for {0}
 credentials.profile.missing_property=Profile ''{0}'' is missing required property {1}
 credentials.profile.name=Profile:{0}
 credentials.profile.not_configured=No active credential provider configured
