Enable support for profiles using SSO (#1835)

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -264,6 +264,13 @@ credentials.profile.source_profile_not_found=Profile ''{0}'' references source p
 credentials.profile.unsupported=Profile ''{0}'' is not using role-based, session-based, process-based, or basic credentials.
 credentials.profile.validation_error=Failed to switch to profile ''{0}''
 credentials.retrieving=Retrieving AWS credentials
+credentials.sso.action=Start SSO login
+credentials.sso.display=''{0}'' requires you to re-login with AWS SSO
+credentials.sso.display.short=SSO login required
+credentials.sso.login.failed=AWS SSO Login Failed
+credentials.sso.login.message=Login to AWS at {0}, code: {1}
+credentials.sso.login.open_browser=Open Browser
+credentials.sso.login.title=AWS SSO Login Required
 delete_resource.delete_failed=Failed to delete {0} ''{1}''
 delete_resource.deleted=Deleted {0} ''{1}''
 delete_resource.message=Are you sure you want to delete {0} ''{1}''?\n\nType the {0} name below to confirm.
