--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -23,7 +23,7 @@ aws.settings.serverless_label=Serverless settings
 aws.settings.telemetry.description=Help us improve our product! Allow us to collect basic usage data.
 aws.settings.telemetry.option=Send usage metrics to AWS
 aws.settings.telemetry.prompt.message=Usage metrics are collected by default. Click <a href="">here</a> to adjust this behavior.
-aws.settings.telemetry.prompt.title=AWS Toolkit
+aws.settings.telemetry.prompt.title=AWS Toolkit Metrics
 aws.settings.title=AWS
 aws_connection.credentials.label=Credentials:
 aws_connection.region.label=Region:
@@ -634,6 +634,12 @@ serverless.application.deploy_in_progress.title=Deploying Application {0}
 settings.credentials=Credentials
 settings.credentials.none_selected=No credentials selected
 settings.credentials.profile_sub_menu=All Credentials
+settings.credentials.prompt_for_default_region_switch=Change region to default region: {0}?
+settings.credentials.prompt_for_default_region_switch.always=Always
+settings.credentials.prompt_for_default_region_switch.ask=Ask
+settings.credentials.prompt_for_default_region_switch.never=Never
+settings.credentials.prompt_for_default_region_switch.setting_label=Change region based on credential:
+settings.credentials.prompt_for_default_region_switch.yes=Yes
 settings.credentials.recent=Recent Credentials
 settings.none_selected=No region or credentials selected
 settings.partitions=Other Partitions
