Some degree of YAML parameter handling. TODO: tests and pass params to input-template.yaml (instead of overwrite)

--- a/package.json
+++ b/package.json
@@ -306,8 +306,10 @@
                                         "type": "boolean"
                                     },
                                     "template": {
+                                        "description": "%AWS.configuration.description.awssam.debug.template%",
                                         "properties": {
                                             "parameters": {
+                                                "description": "%AWS.configuration.description.awssam.debug.templateParameters%",
                                                 "additionalProperties": {
                                                     "type": [
                                                         "string",
