Refs work! TODO: Fix tests/add more tests and improve handling for runtime refs

--- a/package.json
+++ b/package.json
@@ -314,8 +314,7 @@
                                                 "additionalProperties": {
                                                     "type": [
                                                         "string",
-                                                        "number",
-                                                        "boolean"
+                                                        "number"
                                                     ]
                                                 },
                                                 "type": "object"
