--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -261,6 +261,8 @@ credentials.profile.source_profile_not_found=Profile ''{0}'' references source p
 credentials.profile.unsupported=Profile ''{0}'' is not using role-based, session-based, process-based, or basic credentials.
 credentials.profile.validation_error=Failed to switch to profile ''{0}''
 credentials.retrieving=Retrieving AWS credentials
+datagrip.validation.invalid_credential_specified=Invalid credential profile {0} selected!
+datagrip.validation.invalid_region_specified=Invalid region {0} selected!
 delete_resource.delete_failed=Failed to delete {0} ''{1}''
 delete_resource.deleted=Deleted {0} ''{1}''
 delete_resource.message=Are you sure you want to delete {0} ''{1}''?\n\nType the {0} name below to confirm.
@@ -455,8 +457,30 @@ loading_resource.loading=Loading...
 notice.message.jetbrains.minimum.version=Support for version {0} of {1} is being deprecated - the next release will require version {2} or later.
 notice.suppress=Don't show this again
 notice.title.jetbrains.minimum.version=AWS Toolkit Deprecation Notice
+rds.configure_source=Configure database connection
+rds.connection_Failed=Failed to connect to the database! Check the username and connectivity of the database
+rds.custom_username=Custom Username
+rds.database_name=Database Name
+rds.iam_config=Connect with IAM credentials
+rds.iam_config_name={0}@{1}
+rds.iam_connection_display_name=AWS IAM
+rds.iam_role=IAM Role
+rds.iam_user=IAM User
 rds.mysql=MySQL
 rds.postgres=PostgreSQL
+rds.username_type=Username Type
+rds.validation.failed=Database Connection Failed!
+rds.validation.failed_to_parse_url=Failed to parse database URL! URL must be a valid jdbc URL!
+rds.validation.invalid_credential_specified=Invalid credential profile {0} selected!
+rds.validation.invalid_region_specified=Invalid region {0} selected!
+rds.validation.no_host_specified=No host specified!
+rds.validation.no_iam_auth=Database {0} does not have IAM authentication enabled
+rds.validation.no_port_specified=No port specified!
+rds.validation.no_profile_selected=A credential profile must be selected
+rds.validation.no_region_specified=No AWS region specified!
+rds.validation.postgres_db_name=PostgreSQL requires a database name to connect
+rds.validation.setup_guide=See the RDS guide for IAM authentication
+rds.validation.username=A non-empty username is required
 s3.bucket.name.label=Bucket Name:
 s3.copy.bucket.action=Copy Name
 s3.copy.path=Copy path
