--- a/package.json
+++ b/package.json
@@ -851,6 +851,7 @@
         "lint": "eslint -c .eslintrc.js --ext .ts .",
         "lintfix": "eslint -c .eslintrc.js --fix --ext .ts .",
         "package": "vsce package",
+        "packageAlpha": "sed -i .bk 's/\\(    \"version\":\\) .*/\\1 \"1.99.0-SNAPSHOT\",/' package.json && vsce package && mv package.json.bk package.json",
         "install-plugin": "vsce package -o aws-toolkit-vscode-test.vsix && code --install-extension aws-toolkit-vscode-test.vsix",
         "generateTelemetry": "node node_modules/@aws-toolkits/telemetry/lib/generateTelemetry.js --extraInput=src/shared/telemetry/vscodeTelemetry.json --output=src/shared/telemetry/telemetry.gen.ts",
         "generateConfigurationAttributes": "ts-node ./build-scripts/generateConfigurationAttributes.ts",
