Add Redshift IAM Auth  (#1847)

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -481,6 +481,13 @@ rds.validation.no_region_specified=No AWS region specified!
 rds.validation.postgres_db_name=PostgreSQL requires a database name to connect
 rds.validation.setup_guide=See the RDS guide for IAM authentication
 rds.validation.username=A non-empty username is required
+redshift.auth.aws=IAM Auth
+redshift.cluster_id=Cluster ID
+redshift.validation.cluster_does_not_exist=Cluster {0} does not exist in region {1}!
+redshift.validation.invalid_credential_specified=Invalid credential profile {0} selected!
+redshift.validation.invalid_region_specified=Invalid region {0} selected!
+redshift.validation.no_cluster_id=No cluster ID specified!
+redshift.validation.username=A non-empty username is required
 s3.bucket.name.label=Bucket Name:
 s3.copy.bucket.action=Copy Name
 s3.copy.path=Copy path
