Add connect to redshift action (#1850)

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -482,7 +482,8 @@ rds.validation.postgres_db_name=PostgreSQL requires a database name to connect
 rds.validation.setup_guide=See the RDS guide for IAM authentication
 rds.validation.username=A non-empty username is required
 redshift.auth.aws=IAM Auth
-redshift.cluster_id=Cluster ID
+redshift.cluster_id=Cluster ID:
+redshift.connect_aws_credentials=Connect with IAM
 redshift.validation.cluster_does_not_exist=Cluster {0} does not exist in region {1}!
 redshift.validation.invalid_credential_specified=Invalid credential profile {0} selected!
 redshift.validation.invalid_region_specified=Invalid region {0} selected!
