--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -263,9 +263,19 @@ credentials.profile.validation_error=Failed to switch to profile ''{0}''
 credentials.retrieving=Retrieving AWS credentials
 datagrip.auth.secrets_manager=SecretsManager Auth
 datagrip.secret_id=Secret Name/ARN:
-datagrip.secretsmanager.validation.no_password=Secret {0} does not have a field named "password"
+datagrip.secretsmanager.action=Connect with Secrets Manager
+datagrip.secretsmanager.action.confirm_continue=<html><p>{0}</p><br/><p>Continue setting up the database?</p></html>
+datagrip.secretsmanager.action.confirm_continue_title=The selected secret seems to be for a different database
+datagrip.secretsmanager.action.title=Select a Database Secret
+datagrip.secretsmanager.validating=Validating selected secret
+datagrip.secretsmanager.validation.different_address=Secret {0} specifies a different database address ''{1}''
+datagrip.secretsmanager.validation.different_engine=Secret {0} specifies a different database engine ''{1}''
+datagrip.secretsmanager.validation.exception=Exception thrown while validating secret
+datagrip.secretsmanager.validation.failed_to_get=Failed to retrieve secret {0}
+datagrip.secretsmanager.validation.no_password=Secret {0} does not have a field named ''password''
 datagrip.secretsmanager.validation.no_secret=No SecretsManager secret specified
-datagrip.secretsmanager.validation.no_username=Secret {0} does not have a field named "username"
+datagrip.secretsmanager.validation.no_username=Secret {0} does not have a field named ''username''
+datagrip.secretsmanager.validation.unkown_engine=Unknown database engine {0}
 datagrip.validation.invalid_credential_specified=Invalid credential profile {0} selected!
 datagrip.validation.invalid_region_specified=Invalid region {0} selected!
 delete_resource.delete_failed=Failed to delete {0} ''{1}''
