--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -472,15 +472,13 @@ loading_resource.loading=Loading...
 notice.message.jetbrains.minimum.version=Support for version {0} of {1} is being deprecated - the next release will require version {2} or later.
 notice.suppress=Don't show this again
 notice.title.jetbrains.minimum.version=AWS Toolkit Deprecation Notice
-rds.connect=Connect
 rds.iam_config=Connect with IAM credentials
 rds.iam_connection_display_name=AWS IAM
+rds.instance_id=Database Identifier:
 rds.mysql=MySQL
 rds.postgres=PostgreSQL
-rds.validation.failed_to_parse_url=Failed to parse database URL! URL must be a valid jdbc URL!
-rds.validation.no_host_specified=No host specified!
 rds.validation.no_iam_auth=Database {0} does not have IAM authentication enabled
-rds.validation.no_port_specified=No port specified!
+rds.validation.no_instance_id=No database identifier specified
 rds.validation.setup_guide=See the RDS guide for IAM authentication
 rds.validation.username=A non-empty username is required
 redshift.auth.aws=IAM Auth
