Switch from native snippets to snippet CompletionItems
The snippets are matched by (case-insensitive) prefix
Snippets are only shown if one of the following is true:
  - The first word of the prefix is >= 3 chars and 3 chars of the first word have been typed (foo matches foobar).
  - The first word of the prefix is < 3 chars and the entire first word has been typed (e.g. s3 matches s3).

Caveat: VSCode requires at least 1 snippet to be shown in order for snippets to be shown after more text is typed.
Therefore, if only 1 or 2 chars are typed that match (but don't complete) the first word of the prefix,
1 snippet will always be shown.

See https://github.com/microsoft/vscode/issues/13735

--- a/package.json
+++ b/package.json
@@ -135,16 +135,6 @@
                 }
             }
         },
-        "snippets": [
-            {
-                "language": "javascript",
-                "path": "./snippets/out/snippets.json"
-            },
-            {
-                "language": "typescript",
-                "path": "./snippets/out/snippets.json"
-            }
-        ],
         "debuggers": [
             {
                 "type": "aws-sam",
@@ -941,6 +931,7 @@
         "js-yaml": "^3.13.1",
         "jsonc-parser": "^2.0.2",
         "lodash": "^4.17.19",
+        "mnemonist": "^0.38.0",
         "moment": "^2.24.0",
         "original-fs": "^1.1.0",
         "portfinder": "^1.0.25",
