Added SQS to the AWS Explorer

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -317,6 +317,7 @@ explorer.node.rds=RDS
 explorer.node.redshift=Redshift
 explorer.node.s3=S3
 explorer.node.schemas=Schemas
+explorer.node.sqs=SQS
 explorer.refresh.description=Refresh explorer resources
 explorer.registry.no.schema.resources=Registry has no Schemas
 explorer.results_truncated=Results truncated, double click to load more
@@ -667,3 +668,4 @@ settings.regions.none_selected=No region selected
 settings.regions.recent=Recent Regions
 settings.regions.region_sub_menu=All Regions
 settings.title=AWS Connection Settings
+sqs.url.parse_error=Error parsing queue URL
