--- a/buildspec/windowsTests.yml
+++ b/buildspec/windowsTests.yml
@@ -2,13 +2,14 @@ version: 0.2
 env:
     variables:
         AWS_TOOLKIT_TEST_NO_COLOR: '1'
+        VSCODE_TEST_VERSION: '1.46.0' # TODO: Remove when we resolve debugger issues with integration tests
 phases:
     install:
         commands:
             - |
-              if(-Not($Env:CODE_COV_TOKEN -eq $null)) {
-                  choco install -y --no-progress codecov
-              }
+                if(-Not($Env:CODE_COV_TOKEN -eq $null)) {
+                    choco install -y --no-progress codecov
+                }
 
     pre_build:
         commands:
@@ -16,6 +17,7 @@ phases:
 
     build:
         commands:
+            - export VSCODE_TEST_VERSION 1.46.0
             - npm run testCompile
             - npm run lint
             - $env:TEST_REPORT_DIR="$env:CODEBUILD_SRC_DIR/.test_reports"; npm run test
