--- a/buildspec/windowsTests.yml
+++ b/buildspec/windowsTests.yml
@@ -2,33 +2,33 @@ version: 0.2
 env:
     variables:
         AWS_TOOLKIT_TEST_NO_COLOR: '1'
-        VSCODE_TEST_VERSION: '1.46.0' # TODO: Remove when we resolve debugger issues with integration tests
+        VSCODE_TEST_VERSION: '1.46.0' # TODO: Remove when we resolve debugger issues with Windows tests
 phases:
     install:
-        commands: if(-Not($Env:CODE_COV_TOKEN -eq $null)) {
-            choco install -y --no-progress codecov
-            }
-            }
+        commands:
+            - |
+                if(-Not($Env:CODE_COV_TOKEN -eq $null)) {
+                    choco install -y --no-progress codecov
+                }
 
     pre_build:
         commands:
             - npm install
 
-    build:
-        commands:
-            - npm run testCompile
-            - npm run lint
-            - $env:TEST_REPORT_DIR="$env:CODEBUILD_SRC_DIR/.test_reports"; npm run test
-            - |
-                if(-Not($Env:CODEBUILD_BUILD_SUCCEEDING -eq "0" -Or $Env:CODE_COV_TOKEN -eq $null)) {
-                  $env:VCS_COMMIT_ID=$Env:CODEBUILD_RESOLVED_SOURCE_VERSION;
-                  $env:CI_BUILD_URL=[uri]::EscapeUriString($Env:CODEBUILD_BUILD_URL);
-                  $env:CI_BUILD_ID=$Env:CODEBUILD_BUILD_ID;
-                  codecov -t $Env:CODE_COV_TOKEN `
-                    --flag unittest `
-                    -f "build/reports/jacoco/coverageReport/coverageReport.xml" `
-                    -c $Env:CODEBUILD_RESOLVED_SOURCE_VERSION
-                }
+    build: command.0
+        - npm run testCompile
+        - npm run lint
+        - $env:TEST_REPORT_DIR="$env:CODEBUILD_SRC_DIR/.test_reports"; npm run test
+        - |
+        if(-Not($Env:CODEBUILD_BUILD_SUCCEEDING -eq "0" -Or $Env:CODE_COV_TOKEN -eq $null)) {
+        $env:VCS_COMMIT_ID=$Env:CODEBUILD_RESOLVED_SOURCE_VERSION;
+        $env:CI_BUILD_URL=[uri]::EscapeUriString($Env:CODEBUILD_BUILD_URL);
+        $env:CI_BUILD_ID=$Env:CODEBUILD_BUILD_ID;
+        codecov -t $Env:CODE_COV_TOKEN `
+        --flag unittest `
+        -f "build/reports/jacoco/coverageReport/coverageReport.xml" `
+        -c $Env:CODEBUILD_RESOLVED_SOURCE_VERSION
+        }
 
 reports:
     unit-test:
