Temporarily reducing VS Code version to 1.46.0 due to issues with 1.47.0 (#1187)
Tracking issue here: https://github.com/microsoft/vscode/issues/102428

TODO: Remove this hack once 1.47.0 (or newer) resolves the issues here. We can manually run tests by overriding the SAM value in CodeBuild.

--- a/buildspec/windowsTests.yml
+++ b/buildspec/windowsTests.yml
@@ -2,14 +2,14 @@ version: 0.2
 env:
     variables:
         AWS_TOOLKIT_TEST_NO_COLOR: '1'
+        VSCODE_TEST_VERSION: '1.46.0' # TODO: Remove when we resolve debugger issues with Windows tests
 phases:
     install:
         commands:
             - |
-              if(-Not($Env:CODE_COV_TOKEN -eq $null)) {
-                  choco install -y --no-progress codecov
-              }
-
+                if(-Not($Env:CODE_COV_TOKEN -eq $null)) {
+                    choco install -y --no-progress codecov
+                }
     pre_build:
         commands:
             - npm install
@@ -29,7 +29,6 @@ phases:
                     -f "build/reports/jacoco/coverageReport/coverageReport.xml" `
                     -c $Env:CODEBUILD_RESOLVED_SOURCE_VERSION
                 }
-
 reports:
     unit-test:
         files:
