Updating UX for the default region handling settings (#1922)

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -674,9 +674,11 @@ settings.credentials.none_selected=No credentials selected
 settings.credentials.profile_sub_menu=All Credentials
 settings.credentials.prompt_for_default_region_switch=Change region to default region: {0}?
 settings.credentials.prompt_for_default_region_switch.always=Always
-settings.credentials.prompt_for_default_region_switch.ask=Ask
+settings.credentials.prompt_for_default_region_switch.always.description=Always select default region when a credential is selected
+settings.credentials.prompt_for_default_region_switch.ask.description=Ask before changing regions when a credential is selected
 settings.credentials.prompt_for_default_region_switch.never=Never
-settings.credentials.prompt_for_default_region_switch.setting_label=Change region based on credential:
+settings.credentials.prompt_for_default_region_switch.never.description=Never change region when a credential is selected
+settings.credentials.prompt_for_default_region_switch.setting_label=Default region handling:
 settings.credentials.prompt_for_default_region_switch.yes=Yes
 settings.credentials.recent=Recent Credentials
 settings.none_selected=No region or credentials selected
