Added SQS tool window and actions (#1919)
* add tool window and actions

* toolwindow tab temp fix

* added forms and SqsWindowUI file

* small changes

* style fix

* PR changes

* form files fixed

--- a/resources/resources/software/aws/toolkits/resources/localized_messages.properties
+++ b/resources/resources/software/aws/toolkits/resources/localized_messages.properties
@@ -668,4 +668,8 @@ settings.regions.none_selected=No region selected
 settings.regions.recent=Recent Regions
 settings.regions.region_sub_menu=All Regions
 settings.title=AWS Connection Settings
+sqs.poll.message=Poll for Messages
+sqs.queue.polled.messages=Polled Messages
+sqs.send.message=Send a Message
+sqs.toolwindow=SQS
 sqs.url.parse_error=Error parsing queue URL
