--- a/jetbrains-core/resources/META-INF/plugin.xml
+++ b/jetbrains-core/resources/META-INF/plugin.xml
@@ -190,6 +190,7 @@
         <projectService serviceImplementation="software.aws.toolkits.jetbrains.services.lambda.validation.LambdaHandlerValidator" />
         <projectService serviceImplementation="software.aws.toolkits.jetbrains.core.toolwindow.ToolkitToolWindowManager" />
         <projectService serviceImplementation="software.aws.toolkits.jetbrains.services.cloudwatch.logs.CloudWatchLogWindow" />
+        <projectService serviceImplementation="software.aws.toolkits.jetbrains.services.sqs.toolwindow.SqsWindow" />
         <toolWindow id="aws.explorer" anchor="left" secondary="true"
                     factoryClass="software.aws.toolkits.jetbrains.core.explorer.AwsExplorerFactory"
                     icon="AwsIcons.Logos.AWS"/>
@@ -334,6 +335,15 @@
             <separator/>
             <action id="schemas.schema.downloadCode"
                     class="software.aws.toolkits.jetbrains.services.schemas.code.DownloadCodeForSchemaAction"/>
+        </group>
+
+        <group id="aws.toolkit.explorer.sqs.queue" popup="true" compact="false">
+            <action id="sqs.poll.message"
+                    class="software.aws.toolkits.jetbrains.services.sqs.actions.PollMessageAction"/>
+            <separator/>
+            <action id="sqs.send.message"
+                    class="software.aws.toolkits.jetbrains.services.sqs.actions.SendMessageAction"/>
+            <separator/>
         </group>
 
         <action class="software.aws.toolkits.jetbrains.core.credentials.SettingsSelectorAction" id="aws.settings.selector" icon="AwsIcons.Logos.AWS"/>
