--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -83,8 +83,8 @@
             "env": {
                 "TEST_REPORT_DIR": "${workspaceFolder}/.test-reports",
                 "TEST_FILE": "null",
-                "AWS_TOOLKIT_IGNORE_WEBPACK_BUNDLE": "true",
-                "NO_COVERAGE": "true"
+                "AWS_TOOLKIT_IGNORE_WEBPACK_BUNDLE": "true"
+                // "NO_COVERAGE": "true"
             },
             "outFiles": ["${workspaceFolder}/dist/src/integrationTest/**/*.js"],
             "preLaunchTask": "npm: testCompile"
