--- a/package.json
+++ b/package.json
@@ -460,6 +460,11 @@
                     "command": "aws.copyLogStreamName",
                     "when": "resourceScheme == awsCloudWatchLogs",
                     "group": "navigation"
+                },
+                {
+                    "command": "aws.saveCurrentLogStreamContent",
+                    "when": "resourceScheme == awsCloudWatchLogs",
+                    "group": "navigation"
                 }
             ],
             "view/title": [
@@ -804,6 +809,12 @@
                 "title": "%AWS.command.copyLogStreamName%",
                 "category": "AWS",
                 "icon": "$(files)"
+            },
+            {
+                "command": "aws.saveCurrentLogStreamContent",
+                "title": "%AWS.command.saveCurrentLogStreamContent%",
+                "category": "AWS",
+                "icon": "$(save-as)"
             }
         ],
         "jsonValidation": [
@@ -841,6 +852,15 @@
                 "language": "asl",
                 "scopeName": "source.asl",
                 "path": "./syntaxes/ASL.tmLanguage"
+            }
+        ],
+        "resourceLabelFormatters": [
+            {
+                "scheme": "awsCloudWatchLogs",
+                "formatting": {
+                    "label": "${path}",
+                    "separator": "\\"
+                }
             }
         ]
     },
