--- a/package.json
+++ b/package.json
@@ -891,7 +891,7 @@
         ]
     },
     "scripts": {
-        "preinstall": "cd aws-ssm-document-language-service && npm install && cd ..",
+        "installSSMTemp": "cd aws-ssm-document-language-service && npm install && cd ..",
         "vscode:prepublish": "npm run clean && npm run lint && webpack --mode production && npm run buildScripts",
         "bundleDeps": "node ./build-scripts/bundleDeps.js",
         "clean": "node ./build-scripts/clean.js dist",
@@ -903,7 +903,7 @@
         "compile": "webpack --mode development && npm run buildScripts",
         "recompile": "npm run clean && npm run compile",
         "watch": "npm run buildScripts && tsc -watch -p ./",
-        "postinstall": "ts-node ./build-scripts/generateServiceClient.ts && npm run generateTelemetry && npm run generateConfigurationAttributes",
+        "postinstall": "npm run installSSMTemp && ts-node ./build-scripts/generateServiceClient.ts && npm run generateTelemetry && npm run generateConfigurationAttributes",
         "testCompile": "tsc -p ./ && npm run buildScripts",
         "test": "npm run testCompile && ts-node ./test-scripts/test.ts",
         "integrationTest": "npm run testCompile && ts-node ./test-scripts/integrationTest.ts",
@@ -919,73 +919,66 @@
     },
     "devDependencies": {
         "@aws-toolkits/telemetry": "0.0.30",
-        "@ljharb/eslint-config": "^17.1.0",
-        "@types/adm-zip": "^0.4.33",
-        "@types/async-lock": "^1.1.2",
-        "@types/cross-spawn": "^6.0.2",
+        "@types/adm-zip": "^0.4.32",
+        "@types/async-lock": "^1.1.0",
+        "@types/cross-spawn": "^6.0.0",
         "@types/del": "^3.0.1",
-        "@types/fs-extra": "^8.1.1",
-        "@types/glob": "^7.1.3",
-        "@types/js-yaml": "^3.12.5",
-        "@types/lodash": "^4.14.157",
+        "@types/fs-extra": "^8.0.1",
+        "@types/glob": "^7.1.1",
+        "@types/js-yaml": "^3.12.0",
+        "@types/lodash": "^4.14.136",
         "@types/lolex": "^5.1.0",
         "@types/marked": "^0.6.5",
         "@types/mocha": "^7.0.2",
-        "@types/node": "^10.17.27",
+        "@types/node": "^10.14.22",
         "@types/readline-sync": "^1.4.3",
-        "@types/request": "^2.48.5",
+        "@types/request": "^2.47.1",
         "@types/semver": "^5.5.0",
-        "@types/sinon": "^7.5.2",
+        "@types/sinon": "^7.0.13",
         "@types/tcp-port-used": "^1.0.0",
-        "@types/uuid": "^3.4.9",
+        "@types/uuid": "^3.4.4",
         "@types/vscode": "1.42.0",
-        "@types/xml2js": "^0.4.5",
-        "@typescript-eslint/eslint-plugin": "^2.34.0",
-        "@typescript-eslint/eslint-plugin-tslint": "^2.34.0",
-        "@typescript-eslint/parser": "^2.34.0",
+        "@types/xml2js": "^0.4.3",
+        "@typescript-eslint/eslint-plugin": "^2.27.0",
+        "@typescript-eslint/eslint-plugin-tslint": "^2.27.0",
+        "@typescript-eslint/parser": "^2.27.0",
         "circular-dependency-plugin": "^5.2.0",
-        "decache": "^4.6.0",
+        "decache": "^4.4.0",
         "eslint": "^6.8.0",
-        "eslint-config-airbnb": "^18.2.0",
-        "eslint-config-airbnb-base": "^14.2.0",
-        "eslint-config-prettier": "^6.11.0",
+        "eslint-config-prettier": "^6.10.1",
         "eslint-plugin-header": "^3.0.0",
-        "eslint-plugin-import": "^2.22.0",
-        "eslint-plugin-jsx-a11y": "^6.3.1",
         "eslint-plugin-no-null": "^1.0.2",
-        "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-react": "^7.20.3",
         "filemanager-webpack-plugin": "^2.0.5",
         "glob": "^7.1.4",
-        "husky": "^2.7.0",
+        "husky": "^2.3.0",
         "istanbul": "^0.4.5",
         "json-schema-to-typescript": "^8.2.0",
         "lolex": "^5.1.0",
         "marked": "^0.7.0",
-        "mocha": "^7.2.0",
+        "mocha": "^7.1.1",
         "mocha-junit-reporter": "^1.23.3",
         "mocha-multi-reporters": "^1.1.7",
         "prettier": "^1.19.1",
-        "pretty-quick": "^1.11.1",
-        "readline-sync": "^1.4.10",
+        "pretty-quick": "^1.10.0",
+        "readline-sync": "^1.4.9",
         "remap-istanbul": "^0.12.0",
-        "sinon": "^7.5.0",
+        "sinon": "^7.4.2",
         "source-map-support": "^0.5.19",
-        "terser-webpack-plugin": "^2.3.7",
-        "ts-loader": "^6.2.2",
-        "ts-mockito": "^2.6.1",
-        "ts-node": "^8.10.2",
-        "vsce": "^1.77.0",
-        "vscode-nls-dev": "^3.3.2",
-        "vscode-test": "^1.4.0",
-        "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.12"
+        "terser-webpack-plugin": "^2.3.1",
+        "ts-loader": "^6.2.0",
+        "ts-mockito": "^2.5.0",
+        "ts-node": "^8.5.2",
+        "vsce": "^1.69.0",
+        "vscode-nls-dev": "^3.3.1",
+        "vscode-test": "^1.3.0",
+        "webpack": "^4.41.2",
+        "webpack-cli": "^3.3.10"
     },
     "dependencies": {
-        "adm-zip": "^0.4.16",
+        "adm-zip": "^0.4.13",
         "amazon-states-language-service": "^1.1.6",
-        "async-lock": "^1.2.4",
-        "aws-sdk": "^2.717.0",
+        "async-lock": "^1.1.3",
+        "aws-sdk": "^2.581.0",
         "aws-ssm-document-language-service": "file:aws-ssm-document-language-service",
         "cloudformation-schema-js-yaml": "^1.0.1",
         "cross-spawn": "^6.0.5",
@@ -993,29 +986,29 @@
         "fs-extra": "^8.1.0",
         "handlebars": "^4.7.6",
         "immutable": "^4.0.0-rc.12",
-        "js-yaml": "^3.14.0",
-        "jsonc-parser": "^2.3.0",
+        "js-yaml": "^3.13.1",
+        "jsonc-parser": "^2.0.2",
         "lodash": "^4.17.19",
-        "moment": "^2.27.0",
+        "moment": "^2.24.0",
         "original-fs": "^1.1.0",
-        "portfinder": "^1.0.27",
-        "request": "^2.88.2",
-        "semver": "^5.7.1",
+        "portfinder": "^1.0.25",
+        "request": "^2.88.0",
+        "semver": "^5.6.0",
         "sleep-promise": "^8.0.1",
         "strip-ansi": "^5.2.0",
         "tcp-port-used": "^1.0.1",
         "triple-beam": "^1.3.0",
-        "typescript": "^3.9.7",
-        "uuid": "^3.4.0",
-        "vscode-languageclient": "^6.1.3",
+        "typescript": "^3.7.2",
+        "uuid": "^3.3.2",
+        "vscode-languageclient": "^6.1.1",
         "vscode-languageserver": "^6.1.1",
         "vscode-languageserver-textdocument": "^1.0.1",
-        "vscode-nls": "^4.1.2",
-        "vue": "^2.6.11",
-        "winston": "^3.3.3",
-        "winston-transport": "^4.4.0",
-        "xml2js": "^0.4.23",
-        "yaml": "^1.10.0"
+        "vscode-nls": "^4.1.1",
+        "vue": "^2.5.16",
+        "winston": "^3.2.1",
+        "winston-transport": "^4.3.0",
+        "xml2js": "^0.4.19",
+        "yaml": "^1.9.2"
     },
     "prettier": {
         "printWidth": 120,
